Use csv instead of xlsx

--- a/Final.ipynb
+++ b/Final.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -50,49 +50,44 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>clinical.T.Stage</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PatientID</th>\n",
-       "      <th></th>\n",
+       "      <th>FirstID</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>LUNG1-001</th>\n",
-       "      <td>2.0</td>\n",
+       "      <th>0</th>\n",
+       "      <td>09-18-2008-StudyID-69331</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>LUNG1-002</th>\n",
-       "      <td>2.0</td>\n",
+       "      <th>1</th>\n",
+       "      <td>01-01-2014-StudyID-85095</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>LUNG1-003</th>\n",
-       "      <td>2.0</td>\n",
+       "      <th>2</th>\n",
+       "      <td>01-01-2014-StudyID-34270</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>LUNG1-004</th>\n",
-       "      <td>2.0</td>\n",
+       "      <th>3</th>\n",
+       "      <td>09-24-2006-StudyID-27873</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>LUNG1-005</th>\n",
-       "      <td>4.0</td>\n",
+       "      <th>4</th>\n",
+       "      <td>01-01-2014-StudyID-93819</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           clinical.T.Stage\n",
-       "PatientID                  \n",
-       "LUNG1-001               2.0\n",
-       "LUNG1-002               2.0\n",
-       "LUNG1-003               2.0\n",
-       "LUNG1-004               2.0\n",
-       "LUNG1-005               4.0"
+       "                    FirstID\n",
+       "0  09-18-2008-StudyID-69331\n",
+       "1  01-01-2014-StudyID-85095\n",
+       "2  01-01-2014-StudyID-34270\n",
+       "3  09-24-2006-StudyID-27873\n",
+       "4  01-01-2014-StudyID-93819"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,11 +118,11 @@
     "stages=stages.drop(['age','Clinical.N.Stage','Clinical.M.Stage','Overall.Stage','Histology','gender','Survival.time', 'deadstatus.event'],axis=1)\n",
     "\n",
     "#Extract values to parse through folders in data set\n",
-    "first_folder= pd.read_excel('FolderAccess.xlsx')\n",
+    "first_folder= pd.read_csv('FolderAccess.csv')\n",
     "initial= first_folder.drop('SecondID',axis=1)\n",
     "second=first_folder.drop('FirstID',axis=1)\n",
     "\n",
-    "labels_df.head()"
+    "initial.head()"
    ]
   },
   {
