--- a/Final.ipynb
+++ b/Final.ipynb
@@ -6,11 +6,16 @@
    "source": [
     "# Lung Cancer Image Recognition Final Project\n",
     "#### Abigail Rhue, Danny Janani\n",
-    "Note: Using Python 3.6 to be compatible with Tensorflow\n",
-    "Code Breakdown:\n",
+    "\n",
+    "#### Steps:\n",
     "1. Import data set\n",
-    "2. Get data for single patient as a test\n",
-    "3. "
+    "2. Retrieve data from the first patient as a test\n",
+    "3. Define a function to work with Hounsfield units (HU)\n",
+    "4. Define a function to resample the image\n",
+    "5. Define a function to plot the 3D images \n",
+    "6. Visualize segmented lungs\n",
+    "7. Save preprocessed data to a separate script\n",
+    "8. Convolution"
    ]
   },
   {
@@ -26,9 +31,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\abigail\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\dicom\\__init__.py:53: UserWarning: \n",
+      "This code is using an older version of pydicom, which is no longer \n",
+      "maintained as of Jan 2017.  You can access the new pydicom features and API \n",
+      "by installing `pydicom` from PyPI.\n",
+      "See 'Transitioning to pydicom 1.x' section at pydicom.readthedocs.org \n",
+      "for more information.\n",
+      "\n",
+      "  warnings.warn(msg)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -97,7 +116,7 @@
        "LUNG1-006               3.0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +320,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. Define a function to work with Hounsfield units (HU)\n",
+    "### 3. Define a function to work with Hounsfield units (HU)\n",
     "Working with Hounsfield units to differentiate between bone and lung when visualizing the data\n",
     "\n",
     "  * Graphing HU frequency\n",
@@ -310,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -446,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -489,6 +508,7 @@
     }
    ],
    "source": [
+    "#Plot the bone structure\n",
     "plot_3d(np.flip(pix_resampled,0), 500)"
    ]
   },
@@ -505,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,12 +660,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### First Method: Process data based on chaning pixel size for 1mm x 1mm x 1mm"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Process data based on chaning pixel size for 1mm x 1mm x 1mm\n",
     "def process_data_first(patients,stages,i, new_spacing=[1,1,1]):\n",
     "   \n",
     "    stage= stages.at[patients[i], 'clinical.T.Stage']\n",
@@ -673,22 +699,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
+    "#Note: Significantl slower than other instance\n",
     "preprocessed1 = []\n",
-    "range_def=np.arange(SLICE_COUNT)\n",
+    "range_def=np.arange(10)\n",
     "for i in range_def:\n",
-    "    img_data,stage, patient_pix = process_data_first(i,patients,stages,img_px_size=IMG_SIZE_PX, hm_slices=SLICE_COUNT)\n",
+    "    img_data,stage, patient_pix = process_data_first(patients,stages,i, new_spacing=[1,1,1])\n",
     "    preprocessed1.append([img_data,stage])\n",
     "\n",
     "np.save('preprocessed_data-{}.npy'.format(1), preprocessed1)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Second Method: Resample by chunks"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,9 +752,7 @@
     "def mean(a):\n",
     "    return sum(a) / len(a)\n",
     "\n",
-    "test=np.arange(SLICE_COUNT)\n",
-    "\n",
-    "#Process data based on \n",
+    "#Process data based on chunks\n",
     "def process_data_second(i,patients,stages,img_px_size=50, hm_slices=20, visualize=False):\n",
     "    stage= stages.at[patients[i], 'clinical.T.Stage']\n",
     "    path = data_dir + patients[i] +'/'+ initial.iloc[i]['FirstID']+'/'+ second.iloc[i]['SecondID']\n",
@@ -757,15 +806,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "preprocessed2 = []\n",
     "range_def=np.arange(SLICE_COUNT)\n",
     "for i in range_def:\n",
-    "    img_data,stage = process_data_first(i,patients,stages,img_px_size=IMG_SIZE_PX, hm_slices=SLICE_COUNT)\n",
-    "    preprocessed1.append([img_data,stage])\n",
+    "    img_data,stage = process_data_second(i,patients,stages,img_px_size=IMG_SIZE_PX, hm_slices=SLICE_COUNT)\n",
+    "    preprocessed2.append([img_data,stage])\n",
     "\n",
     "np.save('preprocessed_data-{}.npy'.format(2), preprocessed2)"
    ]
@@ -774,7 +823,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 10. Convolution\n",
+    "### 8. Convolution\n",
     "* Define 3D convolution function and 3D maxpool function\n",
     "* Set up convolution neural network function\n",
     "* Train neural network and find accuracy"
@@ -782,16 +831,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_classes = 2\n",
-    "\n",
-    "batch_size = 10\n",
-    "\n",
+    "#Set up convolution and maxpool functions\n",
     "x = tf.placeholder('float')\n",
     "y = tf.placeholder('float')\n",
+    "n_classes=2\n",
+    "batch_size=10\n",
     "\n",
     "keep_rate=0.8\n",
     "def conv3d(x, W):\n",
@@ -803,10 +851,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Define convolution neural network\n",
     "def convolutional_neural_network(x):\n",
     "    weights = {'W_conv1':tf.Variable(tf.random_normal([3,3,3,1,32])),\n",
     "               'W_conv2':tf.Variable(tf.random_normal([3,3,3,32,64])),\n",
@@ -832,40 +881,22 @@
     "    fc = tf.nn.dropout(fc, keep_rate)\n",
     "\n",
     "    output = tf.matmul(fc, weights['out'])+biases['out']\n",
-    "    print('did')\n",
     "    return output\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'IMG_SIZE_PX' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-66-d92ab39c4568>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     39\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     40\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 41\u001b[1;33m \u001b[0mtrain_neural_network\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-66-d92ab39c4568>\u001b[0m in \u001b[0;36mtrain_neural_network\u001b[1;34m(x)\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mtrain_neural_network\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m     \u001b[0mprediction\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mconvolutional_neural_network\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m     \u001b[0mcost\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreduce_mean\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msoftmax_cross_entropy_with_logits\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlogits\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mprediction\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[0moptimizer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mAdamOptimizer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlearning_rate\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1e-3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mminimize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcost\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-65-1c46dc60f85e>\u001b[0m in \u001b[0;36mconvolutional_neural_network\u001b[1;34m(x)\u001b[0m\n\u001b[0;32m     10\u001b[0m                'out':tf.Variable(tf.random_normal([n_classes]))}\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m     \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mshape\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mIMG_SIZE_PX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mIMG_SIZE_PX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mSLICE_COUNT\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[0mconv1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrelu\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconv3d\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mweights\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'W_conv1'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mbiases\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'b_conv1'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'IMG_SIZE_PX' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "much_data = np.load('muchdata-1-2-3.npy')\n",
-    "train_data = much_data[:-2]\n",
-    "validation_data = much_data[-2:]\n",
-    "\n",
-    "def train_neural_network(x):\n",
+    "#Define function to train neural network\n",
+    "def train_neural_network(x, train_data,validation_data):\n",
     "    prediction = convolutional_neural_network(x)\n",
     "    cost = tf.reduce_mean( tf.nn.softmax_cross_entropy_with_logits(logits=prediction, labels=y) )\n",
     "    optimizer = tf.train.AdamOptimizer(learning_rate=1e-3).minimize(cost)\n",
     "    \n",
-    "    hm_epochs = 2\n",
+    "    hm_epochs = 10\n",
     "    with tf.Session() as sess:\n",
     "        sess.run(tf.initialize_all_variables())\n",
     "        \n",
@@ -893,10 +924,82 @@
     "        print('Done. Finishing accuracy:')\n",
     "        print('Accuracy:',accuracy.eval({x:[i[0] for i in validation_data], y:[i[1] for i in validation_data]}))\n",
     "        \n",
-    "        print('fitment percent:',successful_runs/total_runs)\n",
+    "        print('fitment percent:',successful_runs/total_runs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Causes the kernel to fail\n",
     "\n",
+    "# Train with first preprocessed set\n",
+    "#preprocessed = np.load('preprocessed_data-1.npy')\n",
+    "#train_data = preprocessed[:-2]\n",
+    "#validation_data = preprocessed[-2:]\n",
     "\n",
-    "train_neural_network(x)\n"
+    "#print('First preprocessed data')\n",
+    "#train_neural_network(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Second preprocessed data\n",
+      "did\n",
+      "WARNING:tensorflow:From <ipython-input-21-3b9d65b221ac>:4: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "\n",
+      "Future major versions of TensorFlow will allow gradients to flow\n",
+      "into the labels input on backprop by default.\n",
+      "\n",
+      "See `tf.nn.softmax_cross_entropy_with_logits_v2`.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\users\\abigail\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\tensorflow\\python\\util\\tf_should_use.py:189: initialize_all_variables (from tensorflow.python.ops.variables) is deprecated and will be removed after 2017-03-02.\n",
+      "Instructions for updating:\n",
+      "Use `tf.global_variables_initializer` instead.\n",
+      "Epoch 1 completed out of 10 loss: 8747567104.0\n",
+      "Accuracy: 1.0\n",
+      "Epoch 2 completed out of 10 loss: 3715822080.0\n",
+      "Accuracy: 0.5\n",
+      "Epoch 3 completed out of 10 loss: 4130803200.0\n",
+      "Accuracy: 0.5\n",
+      "Epoch 4 completed out of 10 loss: 15801448448.0\n",
+      "Accuracy: 0.5\n",
+      "Epoch 5 completed out of 10 loss: 11325262848.0\n",
+      "Accuracy: 0.5\n",
+      "Epoch 6 completed out of 10 loss: 9089398784.0\n",
+      "Accuracy: 0.5\n",
+      "Epoch 7 completed out of 10 loss: 11498090496.0\n",
+      "Accuracy: 0.5\n",
+      "Epoch 8 completed out of 10 loss: 43150694400.0\n",
+      "Accuracy: 0.0\n",
+      "Epoch 9 completed out of 10 loss: 18800029696.0\n",
+      "Accuracy: 0.5\n",
+      "Epoch 10 completed out of 10 loss: 18636849152.0\n",
+      "Accuracy: 1.0\n",
+      "Done. Finishing accuracy:\n",
+      "Accuracy: 1.0\n",
+      "fitment percent: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Train with second preprocessed set\n",
+    "preprocessed = np.load('preprocessed_data-2.npy')\n",
+    "train_data = preprocessed[:-2]\n",
+    "validation_data = preprocessed[-2:]\n",
+    "\n",
+    "print('Second preprocessed data')\n",
+    "train_neural_network(x, train_data,validation_data)"
    ]
   },
   {
